Bug 74857 Changed CSS selector to be class-specific Added class to From DIV in collapsed header
http://bugzilla.zimbra.com/show_bug.cgi?id=74857

Copied from Perforce
 Change: 374581

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -977,7 +977,8 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 #ENDIF
 }
 
-.Conv2MsgHeader .info DIV {
+.Conv2MsgHeader .info .ZmConvListFrom,
+.Conv2MsgHeader .info .ZmConvListFragment {
 	display:inline;
 	margin:5px 1em 5px 0;
 	overflow:hidden;
